# LeggedRobotController

./: LICENSE  README.md  main.py  terrainGenerator.py
MPC_Controller/: DesiredStateCommand.py  Logger.py  Parameters.py  StateEstimator.py  utils.py
MPC_Controller/common/: FootSwingTrajectory.py  Kinematics.py  LegController.py  RobotDefinition.py
MPC_Controller/controlFSM/: ControlFSMData.py  FSM_State.py  FSM_State_MPCWalking.py  FSM_State_Recovery.py  FSM_State_StandStill.py  controlFSM.py
MPC_Controller/convex_MPC/: CMakeLists.txt  ConvexMPCLocomotion.py  GaitScheduler.py  MPCController.py  mpc_osqp.cc
MPC_Controller/math_utils/: orientation_tools.py
model/: littledog.xml
model/meshes/: base.STL  lb_foot.STL  lb_hip.STL  lf_foot.STL  lf_leg.STL  lm_foot.STL  lm_hip.STL  lm_leg.STL  rf_foot.STL  rf_leg.STL  rm_foot.STL  rm_hip.STL  rm_leg.STL
